recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:13: error: not found: value lshrink
    recule(lshrink * ength)
           ^Tree:13: error: not found: value ength
    recule(lshrink * ength)
                     ^