recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)
{
  if (steps > 0)
  {
    avance(length)
    droite(angle)
    tree(steps - 1, shrink * length, angle, shrink)
    recule(shrink * length)
    gauche(angle)
    
    gauche(angle)
    tree(steps - 1, shrink * length, angle, shrink)
    recule(lshrink * ength)
    droite(angle)
  }
}